fix section tanggapan

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1077,21 +1077,6 @@ input[type="range"]:active::-webkit-slider-thumb{
   margin-bottom: 0.5rem;
 }
 
-.-my-4{
-  margin-top: -1rem;
-  margin-bottom: -1rem;
-}
-
-.-my-6{
-  margin-top: -1.5rem;
-  margin-bottom: -1.5rem;
-}
-
-.-my-10{
-  margin-top: -2.5rem;
-  margin-bottom: -2.5rem;
-}
-
 .-ml-\[1\.5rem\]{
   margin-left: -1.5rem;
 }
@@ -1244,10 +1229,6 @@ input[type="range"]:active::-webkit-slider-thumb{
   margin-top: 0.15rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
 .mb-6{
   margin-bottom: 1.5rem;
 }
@@ -1278,6 +1259,10 @@ input[type="range"]:active::-webkit-slider-thumb{
 
 .flex{
   display: flex;
+}
+
+.inline-flex{
+  display: inline-flex;
 }
 
 .table{
@@ -2430,11 +2415,6 @@ input[type="range"]:active::-webkit-slider-thumb{
   border-color: rgb(143 174 224 / var(--tw-border-opacity));
 }
 
-.border-red-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
-
 .border-slate-400{
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
@@ -2447,6 +2427,11 @@ input[type="range"]:active::-webkit-slider-thumb{
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-red-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity));
 }
 
 .border-t-transparent{
@@ -2647,6 +2632,11 @@ input[type="range"]:active::-webkit-slider-thumb{
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.bg-danger-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 229 233 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -2697,12 +2687,12 @@ input[type="range"]:active::-webkit-slider-thumb{
   --tw-gradient-to: rgba(0,0,0,0.6) var(--tw-gradient-to-position);
 }
 
-.to-rose-400{
-  --tw-gradient-to: #fb7185 var(--tw-gradient-to-position);
-}
-
 .to-yellow-400{
   --tw-gradient-to: #facc15 var(--tw-gradient-to-position);
+}
+
+.to-rose-400{
+  --tw-gradient-to: #fb7185 var(--tw-gradient-to-position);
 }
 
 .bg-100\%{
@@ -3016,10 +3006,6 @@ input[type="range"]:active::-webkit-slider-thumb{
   padding-left: 8px;
 }
 
-.pr-12{
-  padding-right: 3rem;
-}
-
 .pr-2{
   padding-right: 0.5rem;
 }
@@ -3068,20 +3054,8 @@ input[type="range"]:active::-webkit-slider-thumb{
   padding-top: 6px;
 }
 
-.pt-48{
-  padding-top: 12rem;
-}
-
-.pt-28{
-  padding-top: 7rem;
-}
-
-.pb-6{
-  padding-bottom: 1.5rem;
-}
-
-.pb-56{
-  padding-bottom: 14rem;
+.pr-12{
+  padding-right: 3rem;
 }
 
 .text-left{
@@ -3545,9 +3519,9 @@ input[type="range"]:active::-webkit-slider-thumb{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-warning-700{
+.text-danger-700{
   --tw-text-opacity: 1;
-  color: rgb(163 115 19 / var(--tw-text-opacity));
+  color: rgb(176 35 58 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -5508,10 +5482,6 @@ input[type="range"]:active::-webkit-slider-thumb{
 
   .sm\:p-6{
     padding: 1.5rem;
-  }
-
-  .sm\:p-4{
-    padding: 1rem;
   }
 
   .before\:sm\:right-7::before{
